# PNCP-poc

./: .env.example  .gitignore  .sicaf-cookies.json  CHANGELOG.md  CLAUDE.md  DEPLOYMENT-STATUS.md  DISASTER-RECOVERY.md  Dockerfile  PRD.md  README.md  docker-compose.yml  sentry-issues-bottom.md  sentry-snapshot.md  sentry-snapshot2.md
backend/: Dockerfile  FEATURE_FLAGS.md  admin.py  analytics_events.py  auth.py  bid_analyzer.py  bulkhead.py  business_hours.py  cache.py  config.py  consolidation.py  cron_jobs.py  database.py  datalake_query.py  email_service.py  error_response.py  excel.py  filter.py  filter_basic.py  filter_density.py  filter_keywords.py  filter_llm.py  filter_recovery.py  filter_stats.py  filter_status.py  filter_uf.py  filter_utils.py  filter_value.py  gunicorn_conf.py  health.py  intel_sectors_config.yaml  job_queue.py  llm.py  llm_arbiter.py  main.py  metrics.py  middleware.py  pdf_report.py  pncp_client.py  progress.py  (+23 more)
backend/cache/: __init__.py  _ops.py  admin.py  cascade.py  enums.py  local_file.py  manager.py  memory.py  redis.py  supabase.py  swr.py
backend/clients/: licitaja_client.py
backend/config/: __init__.py  base.py  cors.py  features.py  pipeline.py  pncp.py
backend/consolidation/: __init__.py  dedup.py  priority_resolver.py  source_merger.py  source_pipeline.py
backend/cron/: __init__.py  _loop.py  billing.py  cache.py  health.py  notifications.py  pncp_status.py
backend/filter/: __init__.py  core.py  keywords.py  llm.py  pipeline.py
backend/ingestion/: __init__.py  checkpoint.py  config.py  contracts_crawler.py  crawler.py  loader.py  metrics.py  scheduler.py  transformer.py
backend/llm_arbiter/: __init__.py  classification.py  prompt_builder.py  zero_match.py
backend/migrations/: 010_normalize_session_arrays.sql  20260326000000_datalake_raw_bids.sql  README.md
backend/models/: search_state.py
backend/pipeline/: __init__.py  cache_manager.py  helpers.py  tracing.py  worker.py
backend/quota/: __init__.py  plan_auth.py  plan_enforcement.py  quota_atomic.py  quota_core.py  session_tracker.py
backend/routes/: admin_trace.py  alerts.py  analytics.py  auth_check.py  auth_email.py  bid_analysis.py  billing.py  blog_stats.py  calculadora.py  contratos_publicos.py  dados_publicos.py  daily_digest.py  empresa_publica.py  export_sheets.py  feature_flags.py  feedback.py  health.py  health_core.py  messages.py  metrics_api.py  onboarding.py  organizations.py  orgao_publico.py  partners.py  pipeline.py  relatorio.py  reports.py  search.py  search_sse.py  search_status.py  sectors_public.py  seo_admin.py  sessions.py  share.py  sitemap_cnpjs.py  sitemap_orgaos.py  stats_public.py  subscriptions.py  trial_emails.py  user.py  (+1 more)
backend/schemas/: __init__.py  contract.py  search.py  share.py  stats.py  user.py
backend/scripts/: audit_pipeline_complete.py  build_benchmark_from_datalake.py  generate_benchmark_report.py  gsc_metrics.py  run_tests_safe.py  test_audit_pipeline.py  validate_migrations.py
backend/services/: alert_matcher.py  alert_service.py  digest_service.py  dunning.py  organization_service.py  partner_service.py  stripe_reconciliation.py  trial_email_sequence.py  (+1 more)
(+1872 files in other folders)
